[package]
name = "edeltraud"
version = "0.5.0"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Simple thread pool for mixed tokio / threaded infrastructure."
edition = "2021"

[dependencies]
log = "^0.4"
futures = "^0.3"
num_cpus = "^1.13"
crossbeam-channel = "^0.5"

[dev-dependencies]
tokio = { version = "^1.0", features = ["rt"] }
